--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
    <head>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.kendani.js"></script>
-       <script src="class.grass.js"></script>
-       <script src="class.xotaker.js"></script>
+       <script src="class.kendani.js"></script> 
+        <script src="class.Grass.js"></script>
+       <script src="class.GrassEater.js"></script>
        <script src="class.gishatich.js"></script>
        <script src="class.dexin.js"></script>
        <script src="class.gaz.js"></script>
